operator/pkg/gateway-api/testdata/gateway/gateway-infrastructure/input/gateway-infrastructure.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: gateway-with-infrastructure-metadata
  namespace: gateway-conformance-infra
spec:
  gatewayClassName: cilium
  infrastructure:
    annotations:
      key1: value1
    labels:
      key2: value2
  listeners:
  - name: http
    port: 8080
    protocol: HTTP
